--- a/ReadLater5/ReadLater5/Views/Categories/Index.cshtml
+++ b/ReadLater5/ReadLater5/Views/Categories/Index.cshtml
@@ -2,14 +2,17 @@
 
 @{
     ViewBag.Title = "Index";
+    
 }
 
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    <button type="button" class="btn btn-primary" id="btnCreateNew">
+        Create New
+    </button>
 </p>
-<table class="table">
+<table class="table" id="tblCategories">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Name)
@@ -17,7 +20,7 @@
         <th></th>
     </tr>
 
-    @foreach (var item in Model)
+   @* @foreach (var item in Model)
     {
         <tr>
             <td>
@@ -29,6 +32,98 @@
                 @Html.ActionLink("Delete", "Delete", new { id = item.ID })
             </td>
         </tr>
-    }
+    }*@
 
 </table>
+
+<!-- Modal -->
+<div class="modal fade" id="categoryModal" tabindex="-1" role="dialog" aria-labelledby="categoryModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="categoryModalLabel">Create</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="form-horizontal">
+                    <div class="form-group">
+                        <label for="CategoryName" id="categoryModalLabel" class="control-label col-md-2">Category</label>
+                        <div class="col-md-10">
+                            <input type="text" id="CategoryName" class = "form-control" />
+                            <input type="hidden" id="hdnCatModalSwitch" value="" class="catswitch"2/>
+                            <input type="hidden" id="hdnCatID" value="" />
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal" id="btnCloseCreateCat">Close</button>
+                <button type="button" class="btn btn-primary btnSaveCategory" id="btnSaveCategory">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="categoryDeleteModal" tabindex="-1" role="dialog" aria-labelledby="categoryDeleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="categoryDeleteModalLabel">Remove Category</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="form-horizontal">
+                    <div class="form-group">
+                        <label for="CategoryName"  class="control-label col-md-2">Category</label>
+                        <span>Are you sure you want to remove this category?</span>
+                        <div class="col-md-10">
+                            <input type="text" id="DeleteCategoryName" class="form-control" />
+                            <input type="hidden" id="hdnDeleteCatModalSwitch" value="" class="catswitch"/>
+                            <input type="hidden" id="hdnDeleteCatID" value="" />
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal" id="btnCloseDeleteCat">Close</button>
+                <button type="button" class="btn btn-primary btnSaveCategory" id="btnDeleteCategory">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="notLoggedInModal" tabindex="-1" role="dialog" aria-labelledby="notLoggedInModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="notLoggedInModalLabel">Not Logged In</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="form-horizontal">
+                    <div class="form-group">
+                        <span>Please login to view your categories</span>
+                        <div class="col-md-10">
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal" id="btnCloseDeleteCat">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+    let _UserID = '@ViewBag.UserID';
+</script>
