--- a/ReadLater5/ReadLater5/Views/Categories/Index.cshtml
+++ b/ReadLater5/ReadLater5/Views/Categories/Index.cshtml
@@ -8,7 +8,7 @@
 <h2>Index</h2>
 
 <p>
-    <button type="button" class="btn btn-primary" id="btnCreateNew">
+    <button type="button" class="btn btn-primary" id="btnCreateNewCat">
         Create New
     </button>
 </p>
@@ -36,7 +36,7 @@
 
 </table>
 
-<!-- Modal -->
+<!-- Modals -->
 <div class="modal fade" id="categoryModal" tabindex="-1" role="dialog" aria-labelledby="categoryModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
