--- a/ReadLater5/ReadLater5/Views/Bookmarks/Index.cshtml
+++ b/ReadLater5/ReadLater5/Views/Bookmarks/Index.cshtml
@@ -96,6 +96,7 @@
                                     <option>4</option>
                                     <option>5</option>
                                 </select>
+                            <div class="errorfeedback alert-danger" style="display:none;">Please select a valid category</div>
                         </div>
                     </div>
                     <div class="form-group" id="fgNewCat" style="display:none;" >
