--- a/ReadLater5/ReadLater5/Views/Shared/_Layout.cshtml
+++ b/ReadLater5/ReadLater5/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Bookmarks" asp-action="Index">Bookmarks</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Dashboard" asp-action="Index">Dashboard</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
